ctor/tests/errors/ctor_bad_static.stderr
error: Trivial const expressions are not supported. Remove the #[ctor] and use a regular `static`.
 --> tests/errors/ctor_bad_static.rs:3:1
  |
3 | #[ctor]
  | ^^^^^^^
  |
  = note: this error originates in the macro `$crate::__ctor_parse_impl` which comes from the expansion of the attribute macro `ctor` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Trivial const expressions are not supported. Remove the #[ctor] and use a regular `static`.
 --> tests/errors/ctor_bad_static.rs:6:1
  |
6 | #[ctor]
  | ^^^^^^^
  |
  = note: this error originates in the macro `$crate::__ctor_parse_impl` which comes from the expansion of the attribute macro `ctor` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Trivial const expressions are not supported. Remove the #[ctor] and use a regular `static`.
 --> tests/errors/ctor_bad_static.rs:9:1
  |
9 | #[ctor]
  | ^^^^^^^
  |
  = note: this error originates in the macro `$crate::__ctor_parse_impl` which comes from the expansion of the attribute macro `ctor` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Trivial const expressions are not supported. Remove the #[ctor] and use a regular `static`.
  --> tests/errors/ctor_bad_static.rs:12:1
   |
12 | #[ctor]
   | ^^^^^^^
   |
   = note: this error originates in the macro `$crate::__ctor_parse_impl` which comes from the expansion of the attribute macro `ctor` (in Nightly builds, run with -Z macro-backtrace for more info)
